Minor simplifications